fixed blue button color on iphone

--- a/src/index.css
+++ b/src/index.css
@@ -17,4 +17,5 @@ input[type="button"],
 input[type="submit"] {
   -webkit-appearance: none;
   appearance: none;
+  color:black;
 }
